# SdioSpi

./: CMakeLists.txt  build.bat  main.c  test.py
App/: main.c
App/DebugServices/: DebugServices.c  DebugServices.h
App/RingBuff/: RingBuff.c  RingBuff.h
App/SdSpiExample/: SdSpiExample.c  SdSpiExample.h
BSP/: BSP.h
BSP/Services/: services.c  services.h
BSP/Spi/: Spi.c  Spi.h
BSP/SystemClock/: SystemClock.c  SystemClock.h
HAL/STM32F4xxll_Driver/Inc/: stm32f4xx_ll_utils.h
Lib/SdSpi/: SdSpi.c  SdSpi.h  SdSpiInternal.h
MCU/CMSIS/Include/: cmsis_armcc.h
MCU/Inc/: stm32f4xx_it.h
MCU/Src/: freertos.c  stm32f4xx_it.c
Middlewares/FAT/source/: diskio.c  ffconf.h
SdSpi/: SdSpi.c  SdSpi.h  SdSpiInternal.h
SdioSpi/: SdioSpi.c  SdioSpi.h
Tests/: main.c
